<resources>
    <string name="app_name">Music</string>
    <string name="action_settings">Settings</string>
    <!--Login lapa-->
    <string name="login_title">Lietotāja ielogošanas</string>
    <string name="login_button">Ielogoties</string>
    <string name="login_to_reg_button">Ja jums nav konta, varat reģistrēties!</string>
    <string name="login_text_password">Parole:</string>
    <string name="login_text_name">Lietotājvārds:</string>
    <!--Registration lapa-->
    <string name="reg_button">Reģistreties</string>
    <string name="reg_title">Registrešāna</string>
    <string name="reg_text_username">Lietotājvārds</string>
    <string name="reg_text_surname">Uzvārds</string>
    <string name="reg_text_name">Vārds</string>
    <string name="reg_text_password1">Parole:</string>
    <string name="reg_text_password2">Parole (atkārtoti):</string>
    <!--Home lapa-->
    <string name="home_button_home">Home</string>
    <string name="home_button_profile">Profile</string>
    <string name="home_button_search">Search</string>
    <string name="home_title">Home</string>
    <string name="home_playlist_title1">Playlist 1</string>
    <string name="home_playlist_title2">Playlist 2</string>
    <string name="home_playlist_title3">Playlist 3</string>
    <!--Search lapa-->
    <string name="search_button_home">Home</string>
    <string name="search_button_profile">Profile</string>
    <string name="search_button_search">Search</string>
    <string name="search_edittext_search_line">Ko tu vēlies klausīties?</string>
    <string name="search_text_music_author_1">Autors</string>
    <string name="search_text_music_author_2">Autors</string>
    <string name="search_text_music_name_1">Mūzikas nosaukums</string>
    <string name="search_text_music_name_2">Mūzikas nosaukums</string>
    <string name="search_text_playlist_author_1">Autors</string>
    <string name="search_text_playlist_author_2">Autors</string>
    <string name="search_text_playlist_name_1">Playlist nosaukums</string>
    <string name="search_text_playlist_name_2">Playlist nosaukums</string>
    <string name="search_title">Search</string>
    <!--Profile lapa-->
    <string name="profile_button_home">Home</string>
    <string name="profile_button_profile">Profile</string>
    <string name="profile_button_search">Search</string>
    <string name="profile_user_fullname">vārds uzvārds</string>
    <string name="profile_playlist_author1">Autors</string>
    <string name="profile_playlist_author2">Autors</string>
    <string name="profile_playlist_author3">Autors</string>
    <string name="profile_playlist_author4">Autors</string>
    <string name="profile_playlist_name1">Playlist nosaukums</string>
    <string name="profile_playlist_name2">Playlist nosaukums</string>
    <string name="profile_playlist_name3">Playlist nosaukums</string>
    <string name="profile_playlist_name4">Playlist nosaukums</string>
    <string name="profile_playlist_list_title">Jūsu atskaņošanas saraksti :</string>
    <string name="profile_button_stats">Skatīt klausīšanās statistiku</string>
    <string name="profile_title">Profile</string>
    <string name="profile_text_username">lietotājvārds</string>
    <!--Playlist lapa-->
    <string name="playlist_button_comment">Komentēt</string>
    <string name="playlist_button_home">Home</string>
    <string name="playlist_button_profile">Profile</string>
    <string name="playlist_button_search">Search</string>
    <string name="playlist_author">Autora lietotajvārds</string>
    <string name="playlist_name">Playlist nosaukums</string>
    <string name="playlist_search_bar">Ko tu vēlies atrasts?</string>
    <string name="playlist_music_author1">Autors</string>
    <string name="playlist_music_author2">Autors</string>
    <string name="playlist_music_name1">Mūzikas nosaukums</string>
    <string name="playlist_music_name2">Mūzikas nosaukums</string>
    <!-- Comments lapa -->
    <string name="comments_title">Komentēt</string>
    <string name="comments_hint">Uzrakstīt komentāru</string>
    <string name="comments_author">Autora lietotājvārds</string>
    <string name="comments_text">Komentārijs</string>

</resources>